# netweave

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TODO.md  check_1.1.txt  check_bytes.txt  check_bytes_2.txt  check_bytes_3.txt  check_bytes_4.txt  check_final.txt  check_final_2.txt  check_final_3.txt  check_final_4.txt  check_final_corrected.txt  check_final_integration.txt  check_final_ips.txt  check_final_ips_cidr.txt  check_final_ipv6.txt  check_final_refactor.txt  check_macaddr.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_refactor.txt  compose.dev.yaml  compose.yaml  compose.yml  git-cliff.toml  pnpm-lock.yaml  prek.toml  release-plz.toml  release.toml  rust-toolchain.toml  schema.sql
.cache/prek/: config-tracking.json
.cache/prek/cache/prek/workspace/: 5cf0141e7564a6d2
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release-plz.yml  release.yml  tag-release.yml
assets/: style.css
docs/: DOCUMENTATION.md
migrations/: 001_initial_schema.sql  002_create_integrations.sql  003_service_uptime.sql  004_settings.sql  005_users_and_icons.sql  006_oidc_auto_import_default.sql
scripts/: bump-version.sh  git-clean.sh  release-hook.sh
src/: config.rs  lib.rs  main.rs  routes.rs  ui.rs  validation.rs
src/auth/: mod.rs  oidc.rs  oidc_handlers.rs
src/db/: devices.rs  helpers.rs  interfaces.rs  ips.rs  mod.rs  networks.rs  services.rs  settings.rs  users.rs
src/db/devices/: create.rs  delete.rs  details.rs  list.rs  update.rs
src/entities/: devices.rs  integrations.rs  interfaces.rs  ip_addresses.rs  mod.rs  networks.rs  services.rs  settings.rs  users.rs
src/handlers/: common.rs  dashboard.rs  devices.rs  integrations.rs  ips.rs  mod.rs  networks.rs  services.rs  settings.rs  users.rs
src/integrations/: adguard.rs  lease_actions.rs  mod.rs
src/models/: display.rs  entities.rs  forms.rs  mod.rs  payloads.rs  types.rs
src/monitoring/: mod.rs
src/routes/: api.rs  cors.rs  middleware.rs
src/services/: devices.rs  integration_service.rs  ip_service.rs  ips.rs  mod.rs  networks.rs  services.rs
src/utils/: encryption.rs  mod.rs  rate_limit.rs  validation.rs
templates/: generic_detail.html  generic_form.html  generic_list.html  login.html
tests/: api.rs
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/components/: AddDeviceDialog.tsx  AddIntegrationDialog.tsx  AddIntegrationModal.tsx  AddServiceDialog.tsx  AddServiceModal.tsx  AppLayout.tsx  AssignStaticIpDialog.tsx  ChangePasswordDialog.tsx  ConfirmDialog.tsx  CrudPage.tsx  CrudRowActions.tsx  DataFetcher.test.tsx  DataFetcher.tsx  EditDeviceDialog.tsx  EmptyState.tsx  ErrorState.tsx  FormWrapper.tsx  InterfaceDialog.tsx  LoadingSkeletons.tsx  LoadingState.tsx  NetworkDialog.tsx  NetworkErrorPage.tsx  PageHeader.tsx  SearchInput.tsx  ServiceDialog.tsx  ServiceGrid.tsx  StatusBadge.tsx  UserDialog.tsx  app-sidebar.tsx
web/src/components/forms/: FormInputField.tsx  FormSelectField.tsx
web/src/components/ui/: button.tsx  form.tsx  glass-card.tsx  sidebar.tsx  sonner.tsx  switch.tsx
web/src/contexts/: AuthContext.tsx  ErrorContext.tsx
web/src/features/device-details/: DeviceServicesList.tsx  HardwareCard.tsx  InterfaceCard.tsx  IpRow.tsx  useDeviceDetailsMutations.ts
web/src/hooks/: index.ts  useCRUDList.ts  useDebounce.ts  useDeleteWithConfirm.test.ts  useDeleteWithConfirm.ts  useForm.ts  useServices.ts  useTableSearch.ts  useUsers.ts
web/src/layouts/: AppLayout.tsx
web/src/lib/: api-client.test.ts  api-client.ts  device-utils.tsx
web/src/lib/api/: devices.ts  integrations.ts  services.ts  settings.ts
web/src/pages/: AuthCallback.tsx  Dashboard.tsx  DeviceDetails.tsx  Devices.tsx  Integrations.tsx  Login.tsx  Networks.tsx  Services.tsx  Settings.tsx  Users.tsx
web/src/types/: api.ts
