[package]
name = "homelab_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }


sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "ipnetwork", "json", "chrono", "mac_address"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}

# Auth
tower-sessions = "0.14"


askama = "0.15"
askama_axum = "0.4.0"

dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
mac_address = { version = "1.1", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs"] }
bcrypt = "0.18"
